--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $("#sendButton").bind("click", function (event, ui) {
     var gps = $("#locationText").val(); //location text
 
 // if any fields are empty then cant upload
-if (!id || !TitletitleText || !category) {
+if (!id || !title || !category) {
     alert("Some fields are empty and need to be filled out!");
 }
 
