--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ else {
                     alert("Upload complete!")
                 },
                 complete:function() {
-                    $("#yourimage").atr('src','data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAA‌​LAAAAAABAAEAAAICRAEAOw%3D%3D');
+                    $("#yourimage").attr('src','data:image/gif;base64,R0lGODlhAQABAPABAP///wAAACH5BAEKAAAA‌​LAAAAAABAAEAAAICRAEAOw%3D%3D');
                     $("#form1").each(function(){
                         this.reset();
                     });
