working with db

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ function mapStuff(data) {
                                         maxWidth: 300,
                                         // content: '<div class="infobox">'+val.content+'</div>',
                                         // content: val.content,
-                                        content: "<h5>" + val.title + "</h5><br><img src ='" + val.imageurl + "'/><br><p>" + val.imagedesc + "</p>"
+                                        content: "<h5>" + val.title + "</h5><br><img src ='" + val.imageurl + "'/><br><p>" + val.imagedesc + "</p>",
                                         offset: {
                                             y: -32,
                                             x: 12
