working on icons

--- a/index.html
+++ b/index.html
@@ -452,10 +452,10 @@ function mapStuff(data) {
         icon = plantIcon;
      }
 
-     if (va.category == "Other") {
+     if (val.category == "Other") {
         icon = otherIcon;
      }
-     
+
         $map.gmap3({
             marker: {
                 values: [{
