working on icons

--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@ function mapStuff(data) {
     // loop through data
     $.each(data, function (key, val) {
 
-        var animalIcon = "img/wildfire.png";
+        var animalIcon = "img/wildlife.png";
         var plantIcon = "img/palm-tree-export.png";
-        var otherIcon = "http://maps.google.com/mapfiles/marker_purple.png";
+        var otherIcon = "img/panoramicview.png";
 
         if (val.category == "Plants") {
             icon = plantIcon;
